# async-tftp-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config
.github/workflows/: ci.yaml
examples/: tftpd-dir.rs  tftpd-targz.rs  tftpd_dir.rs
rfcs/: rfc7440.txt
src/: async_server.rs  block_stream.rs  bytes_ext.rs  codec.rs  error.rs  executor.rs  handle.rs  lib.rs  log.rs  packet.rs  parse.rs  read_req.rs  runtime.rs  server.rs  server_builder.rs  task.rs  utils.rs  wrappers.rs  write_req.rs
src/server/: builder.rs  handle.rs  handler.rs  mod.rs  read_req.rs  server.rs  write_req.rs
src/server/handlers/: dir.rs  dir_ro.rs  mod.rs
src/tests/: atftp_rrq.rs  client.rs  external_client.rs  handlers.rs  handles.rs  mod.rs  packet.rs  random_file.rs  rrq.rs
src/util/: mod.rs  timeout.rs
src/utils/: mod.rs  timer.rs
