[package]
name = "async-tftp"
version = "0.3.6"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
readme = "README.md"

description = "Executor agnostic async TFTP implementation"
categories = ["network-programming"]
keywords = ["tftp", "tftpd", "async-std", "tokio", "smol"]
exclude = [".github", "rfcs"]
repository = "https://github.com/oblique/async-tftp-rs"

[dependencies]
bytes = "1.5.0"
log = "0.4.20"
thiserror = "1.0.48"

async-executor = "1.5.1"
async-io = "1.13.0"
async-lock = "2.8.0"
blocking = "1.3.1"
futures-lite = "1.13.0"

[dev-dependencies]
anyhow = "1.0.75"
async-channel = "1.9.0"
fern = "0.6.2"
md5 = "0.7.0"
rand = { version = "0.8.5", features = ["small_rng"] }
structopt = "0.3.26"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

# deps for tftpd-targz.rs
async-compression = { version = "0.4.3", features = ["gzip", "futures-io"] }
async-std = { version = "1.12.0", features = ["unstable"] }
async-tar = "0.4.2"

[features]
external-client-tests = []
