[package]
name = "async-tftp"
version = "0.3.6"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
readme = "README.md"

description = "Executor agnostic async TFTP implementation"
categories = ["network-programming"]
keywords = ["tftp", "tftpd", "async-std", "tokio", "smol"]
exclude = [".github", "rfcs"]
repository = "https://github.com/oblique/async-tftp-rs"

[dependencies]
bytes = "1.10.1"
log = "0.4.27"
thiserror = "2.0.12"

async-executor = "1.13.1"
async-io = "2.4.0"
async-lock = "3.4.0"
blocking = "1.6.1"
futures-lite = "2.6.0"

[dev-dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
fern = "0.7.1"
md5 = "0.7.0"
rand = { version = "0.9.0", features = ["small_rng", "os_rng"] }
structopt = "0.3.26"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

# deps for tftpd-targz.rs
async-compression = { version = "0.4.22", features = ["gzip", "futures-io"] }
async-std = { version = "1.13.1", features = ["unstable"] }
async-tar = "0.5.0"

[features]
external-client-tests = []
