[package]
name = "async-tftp"
version = "0.4.2"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
readme = "README.md"

description = "Executor agnostic async TFTP implementation"
categories = ["network-programming"]
keywords = ["tftp", "tftpd", "async-std", "tokio", "smol"]
exclude = [".github", "rfcs"]
repository = "https://github.com/oblique/async-tftp-rs"

[dependencies]
bytes = "1.10.1"
log = "0.4.28"
thiserror = "1.0.69"

async-executor = "1.13.3"
async-io = "2.6.0"
async-lock = "3.4.1"
blocking = "1.6.2"
futures-lite = "2.6.1"

[dev-dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
fern = "0.7.1"
md5 = "0.8.0"
rand = "0.9.2"
structopt = "0.3.26"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

# deps for tftpd-targz.rs
async-compression = { version = "0.4.32", features = ["gzip", "futures-io"] }
async-std = { version = "1.13.2", features = ["unstable"] }
async-tar = "0.5.1"

[features]
external-client-tests = []
